--- a/components/onlinepackagemanager/languages/opkman_const.fi.po
+++ b/components/onlinepackagemanager/languages/opkman_const.fi.po
@@ -1135,107 +1135,182 @@ msgid "Cryptography"
 msgstr "Salaus"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory10
-msgid "Indicators and Gauges"
+#, fuzzy
+#| msgid "Indicators and Gauges"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory10"
+msgid "Grids"
 msgstr "Ilmaisimet ja mittarit"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory11
-msgid "Labels"
+#, fuzzy
+#| msgid "Labels"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory11"
+msgid "Indicators and Gauges"
 msgstr "Nimikkeet"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory12
-msgid "LazIDEPlugins"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory12"
+msgid "Labels"
 msgstr ""
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory13
-msgid "List and Combo Boxes"
+#, fuzzy
+#| msgid "List and Combo Boxes"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory13"
+msgid "LazIDEPlugins"
 msgstr "Luettelo ja ComboBox:t"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory14
-msgid "ListViews and TreeViews"
+#, fuzzy
+#| msgid "ListViews and TreeViews"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory14"
+msgid "List and Combo Boxes"
 msgstr "Luettelo- ja puunäkynät"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory15
-msgid "Menus"
+#, fuzzy
+#| msgid "Menus"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory15"
+msgid "ListViews and TreeViews"
 msgstr "Valikot"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory16
-msgid "Multimedia"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory16"
+msgid "Menus"
 msgstr ""
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory17
-msgid "Networking"
+#, fuzzy
+#| msgid "Networking"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory17"
+msgid "Multimedia"
 msgstr "Verkko"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory18
-msgid "Panels"
+#, fuzzy
+#| msgid "Panels"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory18"
+msgid "Networking"
 msgstr "Paneelit"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory19
-msgid "Reporting"
+#, fuzzy
+#| msgid "Reporting"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory19"
+msgid "Panels"
 msgstr "Raportointi"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory2
-msgid "DataControls"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory2"
+msgid "Database"
 msgstr ""
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory20
-msgid "Science"
+#, fuzzy
+#| msgid "Science"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory20"
+msgid "Reporting"
 msgstr "Tiede"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory21
-msgid "Security"
+#, fuzzy
+#| msgid "Security"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory21"
+msgid "Science"
 msgstr "Turvallisuus"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory22
-msgid "Shapes"
+#, fuzzy
+#| msgid "Shapes"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory22"
+msgid "Security"
 msgstr "Muodot"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory23
-msgid "Sizers and Scrollers"
+#, fuzzy
+#| msgid "Sizers and Scrollers"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory23"
+msgid "Shapes"
 msgstr "Koon muuttajat ja vierityspalkit"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory24
-msgid "System"
+#, fuzzy
+#| msgid "System"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory24"
+msgid "Sizers and Scrollers"
 msgstr "Järjestelmä"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory25
-msgid "Tabbed Components"
+#, fuzzy
+#| msgid "Tabbed Components"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory25"
+msgid "System"
 msgstr "Välilehtikomponentit"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory26
-msgid "Other"
+#, fuzzy
+#| msgid "Other"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory26"
+msgid "Tabbed Components"
 msgstr "Muut"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory27
-msgid "Games and Game Engines"
+#, fuzzy
+#| msgid "Games and Game Engines"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory27"
+msgid "Other"
 msgstr "Pelit ja pelimoottorit"
 
+#: opkman_const.rsmainfrm_vsttext_packagecategory28
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory28"
+msgid "Games and Game Engines"
+msgstr ""
+
 #: opkman_const.rsmainfrm_vsttext_packagecategory3
-msgid "Date and Time"
+#, fuzzy
+#| msgid "Date and Time"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory3"
+msgid "DataControls"
 msgstr "Päiväys ja aika"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory4
-msgid "Dialogs"
+#, fuzzy
+#| msgid "Dialogs"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory4"
+msgid "Date and Time"
 msgstr "Dialogit"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory5
-msgid "Edit and Memos"
+#, fuzzy
+#| msgid "Edit and Memos"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory5"
+msgid "Dialogs"
 msgstr "Muokkaimet ja muistiot"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory6
-msgid "Files and Drives"
+#, fuzzy
+#| msgid "Files and Drives"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory6"
+msgid "Edit and Memos"
 msgstr "Tiedostot ja asemat"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory7
-msgid "GUIContainers"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory7"
+msgid "Files and Drives"
 msgstr ""
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory8
-msgid "Graphics"
+#, fuzzy
+#| msgid "Graphics"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory8"
+msgid "GUIContainers"
 msgstr "Grafiikka"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory9
-msgid "Grids"
+#, fuzzy
+#| msgid "Grids"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory9"
+msgid "Graphics"
 msgstr "Taulukot"
 
 #: opkman_const.rsmainfrm_vsttext_packageinfo
