--- a/components/onlinepackagemanager/languages/opkman_const.uk.po
+++ b/components/onlinepackagemanager/languages/opkman_const.uk.po
@@ -1102,107 +1102,190 @@ msgid "Cryptography"
 msgstr "Криптографія"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory10
-msgid "Indicators and Gauges"
+#, fuzzy
+#| msgid "Indicators and Gauges"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory10"
+msgid "Grids"
 msgstr "Індикатори і покажчики"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory11
-msgid "Labels"
+#, fuzzy
+#| msgid "Labels"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory11"
+msgid "Indicators and Gauges"
 msgstr "Мітки"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory12
-msgid "LazIDEPlugins"
+#, fuzzy
+#| msgid "LazIDEPlugins"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory12"
+msgid "Labels"
 msgstr "LazIDEPlugins"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory13
-msgid "List and Combo Boxes"
+#, fuzzy
+#| msgid "List and Combo Boxes"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory13"
+msgid "LazIDEPlugins"
 msgstr "Списки і поля зі списком"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory14
-msgid "ListViews and TreeViews"
+#, fuzzy
+#| msgid "ListViews and TreeViews"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory14"
+msgid "List and Combo Boxes"
 msgstr "ListView і TreeView"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory15
-msgid "Menus"
+#, fuzzy
+#| msgid "Menus"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory15"
+msgid "ListViews and TreeViews"
 msgstr "Меню"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory16
-msgid "Multimedia"
+#, fuzzy
+#| msgid "Multimedia"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory16"
+msgid "Menus"
 msgstr "Мультимедіа"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory17
-msgid "Networking"
+#, fuzzy
+#| msgid "Networking"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory17"
+msgid "Multimedia"
 msgstr "Мережа"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory18
-msgid "Panels"
+#, fuzzy
+#| msgid "Panels"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory18"
+msgid "Networking"
 msgstr "Панелі"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory19
-msgid "Reporting"
+#, fuzzy
+#| msgid "Reporting"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory19"
+msgid "Panels"
 msgstr "Звіти"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory2
-msgid "DataControls"
+#, fuzzy
+#| msgid "DataControls"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory2"
+msgid "Database"
 msgstr "Керування даними"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory20
-msgid "Science"
+#, fuzzy
+#| msgid "Science"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory20"
+msgid "Reporting"
 msgstr "Наука"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory21
-msgid "Security"
+#, fuzzy
+#| msgid "Security"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory21"
+msgid "Science"
 msgstr "Безпека"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory22
-msgid "Shapes"
+#, fuzzy
+#| msgid "Shapes"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory22"
+msgid "Security"
 msgstr "Фігури"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory23
-msgid "Sizers and Scrollers"
+#, fuzzy
+#| msgid "Sizers and Scrollers"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory23"
+msgid "Shapes"
 msgstr "Розмір і прокрутка"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory24
-msgid "System"
+#, fuzzy
+#| msgid "System"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory24"
+msgid "Sizers and Scrollers"
 msgstr "Система"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory25
-msgid "Tabbed Components"
+#, fuzzy
+#| msgid "Tabbed Components"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory25"
+msgid "System"
 msgstr "Компоненти зі вкладками"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory26
-msgid "Other"
+#, fuzzy
+#| msgid "Other"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory26"
+msgid "Tabbed Components"
 msgstr "Інше"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory27
-msgid "Games and Game Engines"
+#, fuzzy
+#| msgid "Games and Game Engines"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory27"
+msgid "Other"
 msgstr "Ігрові рушії й ігри"
 
+#: opkman_const.rsmainfrm_vsttext_packagecategory28
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory28"
+msgid "Games and Game Engines"
+msgstr ""
+
 #: opkman_const.rsmainfrm_vsttext_packagecategory3
-msgid "Date and Time"
+#, fuzzy
+#| msgid "Date and Time"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory3"
+msgid "DataControls"
 msgstr "Дата й час"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory4
-msgid "Dialogs"
+#, fuzzy
+#| msgid "Dialogs"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory4"
+msgid "Date and Time"
 msgstr "Діалоги"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory5
-msgid "Edit and Memos"
+#, fuzzy
+#| msgid "Edit and Memos"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory5"
+msgid "Dialogs"
 msgstr "Поля введення"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory6
-msgid "Files and Drives"
+#, fuzzy
+#| msgid "Files and Drives"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory6"
+msgid "Edit and Memos"
 msgstr "Файли і накопичувачі"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory7
-msgid "GUIContainers"
+#, fuzzy
+#| msgid "GUIContainers"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory7"
+msgid "Files and Drives"
 msgstr "Компоненти-контейнери"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory8
-msgid "Graphics"
+#, fuzzy
+#| msgid "Graphics"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory8"
+msgid "GUIContainers"
 msgstr "Графіка"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory9
-msgid "Grids"
+#, fuzzy
+#| msgid "Grids"
+msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory9"
+msgid "Graphics"
 msgstr "Таблиці"
 
 #: opkman_const.rsmainfrm_vsttext_packageinfo
