--- a/components/pas2js/languages/strpas2jsdesign.pt_BR.po
+++ b/components/pas2js/languages/strpas2jsdesign.pt_BR.po
@@ -455,8 +455,10 @@ msgid "Warning"
 msgstr ""
 
 #: strpas2jsdesign.pjsdwebappdescription
+#, fuzzy
+#| msgid "A pas2js program running in the browser."
 msgctxt "strpas2jsdesign.pjsdwebappdescription"
-msgid "A pas2js program running in the browser."
+msgid "A pas2js program running in the browser, with optional support for running a webassembly program and threading."
 msgstr "Um programa pas2js executando no navegador."
 
 #: strpas2jsdesign.pjsdwebapplication
@@ -492,6 +494,10 @@ msgstr "Atualizar todas as classes do fonte HTML"
 #: strpas2jsdesign.pjsrefreshclassfromhtml
 msgid "Refresh class from HTML source"
 msgstr "Atualizar classes do fonte HTML"
+
+#: strpas2jsdesign.pjswasienablethreading
+msgid "Enable webassembly threading"
+msgstr ""
 
 #: strpas2jsdesign.pjswasiprogramfiletexthint
 msgid "Name of your WebAssembly file"
