--- a/components/pas2js/languages/strpas2jsdesign.fr.po
+++ b/components/pas2js/languages/strpas2jsdesign.fr.po
@@ -452,7 +452,9 @@ msgid "Warning"
 msgstr ""
 
 #: strpas2jsdesign.pjsdwebappdescription
-msgid "A pas2js program running in the browser."
+#, fuzzy
+#| msgid "A pas2js program running in the browser."
+msgid "A pas2js program running in the browser, with optional support for running a webassembly program and threading."
 msgstr "Un programme pas2js en cours d'exécution dans le navigateur."
 
 #: strpas2jsdesign.pjsdwebapplication
@@ -486,6 +488,10 @@ msgstr ""
 
 #: strpas2jsdesign.pjsrefreshclassfromhtml
 msgid "Refresh class from HTML source"
+msgstr ""
+
+#: strpas2jsdesign.pjswasienablethreading
+msgid "Enable webassembly threading"
 msgstr ""
 
 #: strpas2jsdesign.pjswasiprogramfiletexthint
