--- a/components/pas2js/languages/strpas2jsdesign.hu.po
+++ b/components/pas2js/languages/strpas2jsdesign.hu.po
@@ -456,7 +456,7 @@ msgstr ""
 #: strpas2jsdesign.pjsdwebappdescription
 #, fuzzy
 #| msgid "A pas2js program running in the browser"
-msgid "A pas2js program running in the browser."
+msgid "A pas2js program running in the browser, with optional support for running a webassembly program and threading."
 msgstr "Egy pas2js program, mely a webböngészőben futtatható"
 
 #: strpas2jsdesign.pjsdwebapplication
@@ -490,6 +490,10 @@ msgstr ""
 
 #: strpas2jsdesign.pjsrefreshclassfromhtml
 msgid "Refresh class from HTML source"
+msgstr ""
+
+#: strpas2jsdesign.pjswasienablethreading
+msgid "Enable webassembly threading"
 msgstr ""
 
 #: strpas2jsdesign.pjswasiprogramfiletexthint
