Pas2JS: regenerated translations and updated Russian translation

--- a/components/pas2js/languages/strpas2jsdesign.fr.po
+++ b/components/pas2js/languages/strpas2jsdesign.fr.po
@@ -454,7 +454,7 @@ msgstr ""
 #: strpas2jsdesign.pjsdwebappdescription
 #, fuzzy
 #| msgid "A pas2js program running in the browser."
-msgid "A pas2js program running in the browser, with optional support for running a webassembly program and threading."
+msgid "A pas2js program running in the browser, with optional support for running a WebAssembly program and threading."
 msgstr "Un programme pas2js en cours d'exécution dans le navigateur."
 
 #: strpas2jsdesign.pjsdwebapplication
@@ -491,7 +491,7 @@ msgid "Refresh class from HTML source"
 msgstr ""
 
 #: strpas2jsdesign.pjswasienablethreading
-msgid "Enable webassembly threading"
+msgid "Enable WebAssembly threading"
 msgstr ""
 
 #: strpas2jsdesign.pjswasiprogramfiletexthint
