--- a/components/pas2js/languages/strpas2jsdesign.tr.po
+++ b/components/pas2js/languages/strpas2jsdesign.tr.po
@@ -459,7 +459,7 @@ msgstr "Uyarı"
 #: strpas2jsdesign.pjsdwebappdescription
 #, fuzzy
 #| msgid "A pas2js program running in the browser."
-msgid "A pas2js program running in the browser, with optional support for running a webassembly program and threading."
+msgid "A pas2js program running in the browser, with optional support for running a WebAssembly program and threading."
 msgstr "Tarayıcıda çalışan bir pas2js programı."
 
 #: strpas2jsdesign.pjsdwebapplication
@@ -496,7 +496,7 @@ msgid "Refresh class from HTML source"
 msgstr "Sınıfı HTML kaynağından yenileme"
 
 #: strpas2jsdesign.pjswasienablethreading
-msgid "Enable webassembly threading"
+msgid "Enable WebAssembly threading"
 msgstr ""
 
 #: strpas2jsdesign.pjswasiprogramfiletexthint
