--- a/components/pas2js/languages/strpas2jsdesign.pt_BR.po
+++ b/components/pas2js/languages/strpas2jsdesign.pt_BR.po
@@ -458,7 +458,7 @@ msgstr ""
 #, fuzzy
 #| msgid "A pas2js program running in the browser."
 msgctxt "strpas2jsdesign.pjsdwebappdescription"
-msgid "A pas2js program running in the browser, with optional support for running a webassembly program and threading."
+msgid "A pas2js program running in the browser, with optional support for running a WebAssembly program and threading."
 msgstr "Um programa pas2js executando no navegador."
 
 #: strpas2jsdesign.pjsdwebapplication
@@ -496,7 +496,7 @@ msgid "Refresh class from HTML source"
 msgstr "Atualizar classes do fonte HTML"
 
 #: strpas2jsdesign.pjswasienablethreading
-msgid "Enable webassembly threading"
+msgid "Enable WebAssembly threading"
 msgstr ""
 
 #: strpas2jsdesign.pjswasiprogramfiletexthint
