--- a/components/pas2js/languages/strpas2jsdesign.zh_CN.po
+++ b/components/pas2js/languages/strpas2jsdesign.zh_CN.po
@@ -456,7 +456,7 @@ msgstr ""
 #: strpas2jsdesign.pjsdwebappdescription
 #, fuzzy
 #| msgid "A pas2js program running in the browser."
-msgid "A pas2js program running in the browser, with optional support for running a webassembly program and threading."
+msgid "A pas2js program running in the browser, with optional support for running a WebAssembly program and threading."
 msgstr "在浏览器中运行的 pas2js 程序。"
 
 #: strpas2jsdesign.pjsdwebapplication
@@ -493,7 +493,7 @@ msgid "Refresh class from HTML source"
 msgstr "从 HTML 源代码刷新类"
 
 #: strpas2jsdesign.pjswasienablethreading
-msgid "Enable webassembly threading"
+msgid "Enable WebAssembly threading"
 msgstr ""
 
 #: strpas2jsdesign.pjswasiprogramfiletexthint
