IDE: TreeView property editor: - Replaced sccsTrEdtConfirmationCaption with the existing rsMtConfirmation from the LCL. - Set opendialog filter to "All files" by default (instead of the new XML type). - Hint that node images can be stored in XML format. Patch by n7800, with minor modification by me.

--- a/components/ideintf/languages/objinspstrconsts.de.po
+++ b/components/ideintf/languages/objinspstrconsts.de.po
@@ -1753,13 +1753,11 @@ msgstr "&Abbrechen"
 msgid "TreeView Items Editor"
 msgstr "Editor für TreeView-Einträge"
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr "Bestätigung"
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
+#, fuzzy
+#| msgid "Information about node images cannot be stored in the file. Continue anyway?"
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr "Information über die Knoten-Bilder kann nicht in der Datei gespeichert werden. Trotzdem fortfahren?"
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
