--- a/components/ideintf/languages/objinspstrconsts.fr.po
+++ b/components/ideintf/languages/objinspstrconsts.fr.po
@@ -1753,13 +1753,11 @@ msgstr "&Annuler"
 msgid "TreeView Items Editor"
 msgstr "Éditeur d'éléments TreeView"
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr "Confirmation"
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
+#, fuzzy
+#| msgid "Information about node images cannot be stored in the file. Continue anyway?"
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr "Les informations relatives aux images de nœuds ne peuvent pas être stockées dans le fichier. Continuer quand même ?"
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
