--- a/components/ideintf/languages/objinspstrconsts.ja.po
+++ b/components/ideintf/languages/objinspstrconsts.ja.po
@@ -1781,13 +1781,9 @@ msgstr "キャンセル(&C)"
 msgid "TreeView Items Editor"
 msgstr "ツリービューアイテムエディタ"
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr ""
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
