--- a/components/ideintf/languages/objinspstrconsts.uk.po
+++ b/components/ideintf/languages/objinspstrconsts.uk.po
@@ -1783,13 +1783,9 @@ msgstr "&Скасувати"
 msgid "TreeView Items Editor"
 msgstr "Редактор елементів TreeView"
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr ""
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
