--- a/components/ideintf/languages/objinspstrconsts.ca.po
+++ b/components/ideintf/languages/objinspstrconsts.ca.po
@@ -1822,13 +1822,9 @@ msgstr "&Cancel·la"
 msgid "TreeView Items Editor"
 msgstr ""
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr ""
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
