--- a/components/ideintf/languages/objinspstrconsts.es.po
+++ b/components/ideintf/languages/objinspstrconsts.es.po
@@ -1771,13 +1771,9 @@ msgstr "&Cancelar"
 msgid "TreeView Items Editor"
 msgstr "Editor de elementos de TreeView"
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr ""
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
