--- a/components/ideintf/languages/objinspstrconsts.he.po
+++ b/components/ideintf/languages/objinspstrconsts.he.po
@@ -1834,13 +1834,9 @@ msgstr "בטל"
 msgid "TreeView Items Editor"
 msgstr "תצוגת עץ של עורך פריטים"
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr ""
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
