--- a/components/ideintf/languages/objinspstrconsts.hu.po
+++ b/components/ideintf/languages/objinspstrconsts.hu.po
@@ -1786,13 +1786,9 @@ msgstr "Mégsem"
 msgid "TreeView Items Editor"
 msgstr "TreeView elemszerkesztő"
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr ""
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
