--- a/components/ideintf/languages/objinspstrconsts.id.po
+++ b/components/ideintf/languages/objinspstrconsts.id.po
@@ -1836,13 +1836,9 @@ msgstr "B&atal"
 msgid "TreeView Items Editor"
 msgstr "Editor Item TreeView"
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr ""
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
