--- a/components/ideintf/languages/objinspstrconsts.it.po
+++ b/components/ideintf/languages/objinspstrconsts.it.po
@@ -1774,13 +1774,9 @@ msgstr "&Annulla"
 msgid "TreeView Items Editor"
 msgstr "Editor voci della Treeview"
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr ""
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
