--- a/components/ideintf/languages/objinspstrconsts.lt.po
+++ b/components/ideintf/languages/objinspstrconsts.lt.po
@@ -1774,13 +1774,9 @@ msgstr "&Atsisakyti"
 msgid "TreeView Items Editor"
 msgstr "TreeView elementų rengyklė"
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr ""
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
