--- a/components/ideintf/languages/objinspstrconsts.pl.po
+++ b/components/ideintf/languages/objinspstrconsts.pl.po
@@ -1767,13 +1767,9 @@ msgstr "&Anuluj"
 msgid "TreeView Items Editor"
 msgstr "Edytor elementów TreeView"
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr ""
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
