--- a/components/ideintf/languages/objinspstrconsts.pot
+++ b/components/ideintf/languages/objinspstrconsts.pot
@@ -1743,13 +1743,9 @@ msgstr ""
 msgid "TreeView Items Editor"
 msgstr ""
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr ""
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
