--- a/components/ideintf/languages/objinspstrconsts.pt_BR.po
+++ b/components/ideintf/languages/objinspstrconsts.pt_BR.po
@@ -1780,13 +1780,11 @@ msgstr "&Cancelar"
 msgid "TreeView Items Editor"
 msgstr "Editor Itens \"TreeView\""
 
-#: objinspstrconsts.sccstredtconfirmationcaption
-msgid "Confirmation"
-msgstr "Confirmação"
-
 #: objinspstrconsts.sccstredtconfirmationimagesloss
+#, fuzzy
+#| msgid "Information about node images cannot be stored in the file. Continue anyway?"
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in the file. Continue anyway?"
+msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
 msgstr "As informações sobre imagens dos nodes não podem ser armazenadas no arquivo. Continue de qualquer maneira?"
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
