--- a/components/ideintf/languages/objinspstrconsts.uk.po
+++ b/components/ideintf/languages/objinspstrconsts.uk.po
@@ -1785,7 +1785,7 @@ msgstr "Редактор елементів TreeView"
 
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
+msgid "Information about node images can only be stored in XML file format. Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
