--- a/components/ideintf/languages/objinspstrconsts.de.po
+++ b/components/ideintf/languages/objinspstrconsts.de.po
@@ -1757,7 +1757,7 @@ msgstr "Editor für TreeView-Einträge"
 #, fuzzy
 #| msgid "Information about node images cannot be stored in the file. Continue anyway?"
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
+msgid "Information about node images can only be stored in XML file format. Continue anyway?"
 msgstr "Information über die Knoten-Bilder kann nicht in der Datei gespeichert werden. Trotzdem fortfahren?"
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
