--- a/components/ideintf/languages/objinspstrconsts.fi.po
+++ b/components/ideintf/languages/objinspstrconsts.fi.po
@@ -1786,7 +1786,7 @@ msgstr "TreeView:n kohtien muokkain"
 
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
+msgid "Information about node images can only be stored in XML file format. Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
