--- a/components/ideintf/languages/objinspstrconsts.fr.po
+++ b/components/ideintf/languages/objinspstrconsts.fr.po
@@ -1757,7 +1757,7 @@ msgstr "Éditeur d'éléments TreeView"
 #, fuzzy
 #| msgid "Information about node images cannot be stored in the file. Continue anyway?"
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
+msgid "Information about node images can only be stored in XML file format. Continue anyway?"
 msgstr "Les informations relatives aux images de nœuds ne peuvent pas être stockées dans le fichier. Continuer quand même ?"
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
