--- a/components/ideintf/languages/objinspstrconsts.he.po
+++ b/components/ideintf/languages/objinspstrconsts.he.po
@@ -1836,7 +1836,7 @@ msgstr "תצוגת עץ של עורך פריטים"
 
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
+msgid "Information about node images can only be stored in XML file format. Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
