--- a/components/ideintf/languages/objinspstrconsts.hu.po
+++ b/components/ideintf/languages/objinspstrconsts.hu.po
@@ -1788,7 +1788,7 @@ msgstr "TreeView elemszerkesztő"
 
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
+msgid "Information about node images can only be stored in XML file format. Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
