--- a/components/ideintf/languages/objinspstrconsts.sk.po
+++ b/components/ideintf/languages/objinspstrconsts.sk.po
@@ -1792,7 +1792,7 @@ msgstr "Editor položiek TreeView"
 
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
+msgid "Information about node images can only be stored in XML file format. Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
