--- a/components/ideintf/languages/objinspstrconsts.tr.po
+++ b/components/ideintf/languages/objinspstrconsts.tr.po
@@ -1760,7 +1760,7 @@ msgstr "TreeView Öğe düzenleyici"
 #, fuzzy
 #| msgid "Information about node images cannot be stored in the file. Continue anyway?"
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
+msgid "Information about node images can only be stored in XML file format. Continue anyway?"
 msgstr "Düğüm görüntüleri hakkında bilgiler dosyada saklanamaz. Yine de devam etmek istiyor musunuz?"
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
