--- a/components/ideintf/languages/objinspstrconsts.zh_CN.po
+++ b/components/ideintf/languages/objinspstrconsts.zh_CN.po
@@ -1781,7 +1781,7 @@ msgstr "TreeView项目编辑器"
 
 #: objinspstrconsts.sccstredtconfirmationimagesloss
 msgctxt "objinspstrconsts.sccstredtconfirmationimagesloss"
-msgid "Information about node images cannot be stored in TXT file format (use XML for that). Continue anyway?"
+msgid "Information about node images can only be stored in XML file format. Continue anyway?"
 msgstr ""
 
 #: objinspstrconsts.sccstredtconfirmationtreereplace
